<resources>
    <string name="app_name">부산여행</string>
    <string name="app_name2">부산여행 Busan Travel</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_food_course">푸디 투어</string>
    <string name="menu_cafe">카페 투어</string>
    <string name="menu_mytrip">My Trip</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

    <!-- 홈 아이콘 -->
    <string name="icon_Hospital">병원</string>
    <string name="icon_Parking">공공주차장</string>
    <string name="icon_Bus">버스</string>
    <string name="icon_Disabledperson">장애인 편의시설</string>
    <string name="icon_Food">모범음식점</string>
    <string name="icon_Storytelling">스토리텔링</string>
    <string name="icon_Map">지도</string>

    <!--로그인-->
    <string name="login">Login</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="create_account">가입하기</string>
    <string name="otp_code_text">Co\nde</string>
    <string name="otp_verification_text">Verification</string>
    <string name="otp_description_text">code</string>

    <!-- text -->
    <string name="prompt_trip_name">여행명을 입력하세요</string>
    <string name="prompt_start_date">여행 일자를 선택하세요</string>
    <string name="search_title">Cities</string>
    <string name="sample_state">Delhi</string>

    <!-- Image Description -->
    <string name="EventImage">Event Icon</string>
    <string name="LocationImage">Location Icon</string>

    <!-- Button Text -->
    <string name="prompt_add_trip">저장</string>

    <string name="wrong_date_alert">지나간 일자는 선택할 수 없습니다.</string>

    <string name="trip_name_blank">여행명을 입력해주세요.</string>
    <string name="trip_date_blank">일자를 선택해주세요.</string>
    <string name="trip_city_blank">지역을 선택해주세요.</string>

    <string name="progress_wait">잠시만 기다려주세요.</string>
    <string name="trip_added">Trip added</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
