<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />

    </group>

    <item android:title="체크리스트">
        <menu>
            <item
                android:id="@+id/nav_checklist"
                android:icon="@drawable/ic_check_black_24dp"
                android:title="체크리스트" />
        </menu>
    </item>


    <item android:title="My Trip">
        <menu>
            <item
                android:id="@+id/nav_mytrip"
                android:icon="@drawable/ic_mode_edit_black_24dp"
                android:title="My Trip" />
        </menu>
    </item>

    <item android:title="@string/calendar">
        <menu>
            <item
                android:id="@+id/nav_calendar"
                android:icon="@drawable/ic_calendar_black"
                android:title="@string/menu_calendar" />
        </menu>
    </item>



    <item android:title="지도">

        <menu>
            <item
                android:id="@+id/nav_culture"
                android:checkable="true"
                android:icon="@drawable/ic_map"
                android:title="문화 / 관광 한눈에 보기" />
            <item
                android:id="@+id/nav_eat"
                android:checkable="true"
                android:icon="@drawable/ic_map"
                android:title="음식점 / 카페 한눈에 보기" />
            <item
                android:id="@+id/nav_publicTrans"
                android:checkable="true"
                android:icon="@drawable/ic_map"
                android:title="대중교통 한눈에 보기" />
            <item
                android:id="@+id/nav_medical"
                android:checkable="true"
                android:icon="@drawable/ic_map"
                android:title="의료시설 한눈에 보기" />
        </menu>

    </item>

    <item android:title="코스">
        <menu>
            <item
                android:id="@+id/nav_daytrip"
                android:icon="@drawable/ic_edit_location"
                android:title="당일여행" />

            <item
                android:id="@+id/nav_two_three"
                android:icon="@drawable/ic_edit_location"
                android:title="2박 3일여행" />
            <item
                android:id="@+id/nav_one_night_two_days"
                android:icon="@drawable/ic_edit_location"
                android:title="1박 2일 여행" />

            <item
                android:id="@+id/nav_food_course"
                android:icon="@drawable/ic_edit_location"
                android:title="@string/menu_food_course" />

            <item
                android:id="@+id/nav_cafe"
                android:icon="@drawable/ic_edit_location"
                android:title="@string/menu_cafe" />
        </menu>
    </item>
</menu>